Fix little jump that background page does when opening a modal

--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -9,7 +9,7 @@ body.modal-open {
 }
 
 body {
-  transition: all 0.5s ease;
+  transition: color 0.5s ease, background-color 0.5s ease;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
